# flask-nix-docker

./: .gitignore  docker-compose.yml  flake.nix  pyproject.toml
src/: app.py
