[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = "Based on the flask/nix/docker example by Mitchell Hashimoto <mitchell.hashimoto@gmail.com>"
authors = ["yeehaZeroG"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.1.0"
Flask-WTF = "*"
Flask-SQLAlchemy = "*"
psycopg2 = "*"
SQLAlchemy = "*"

[tool.poetry.scripts]
app = 'src.app:main'

[build-system]
requires = ["poetry-core>=1.8.4"]
build-backend = "poetry.core.masonry.api"
